Add /authenticate endpoint
